added more info

--- a/index.html
+++ b/index.html
@@ -102,12 +102,24 @@
         <div id="final" class="intro">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2> Final Performance </h2>
+                    <div class="col-lg-6">
+                        <h2 class="text-center">Judging Criteria</h2>
                         <hr>
+
+                        <ol>
+                            <li><b>Musical ability</b> - vocal/instrumental ability, tonal
+                                quality, difficulty </li>
+                            <li><b>Originality</b> - Innovation in the interpretation of works,
+                                presenting self-compositions. </li>
+                            <li><b>Stage presence</b> - Fluidity, group communication,
+                                audience appeal.</li>
+                        </ol>
                     </div>
 
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
+                        <h2 class="text-center"> Final Performance </h2>
+                        <hr>
+
                         <ol>
                             <li>Bands will be given 25* minutes – amps on to
                                 amps off. A warning will be given at 21* minutes
@@ -127,46 +139,34 @@
                                 band.</li>
                         </ol>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h2 class="text-center">Judging Criteria</h2>
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h2 class="text-center"> Rules </h2>
                         <hr>
 
                         <ol>
-                            <li>Musical ability - vocal/instrumental ability, tonal
-                                quality, difficulty </li>
-                            <li>Originality - Innovation in the interpretation of works,
-                                presenting self-compositions. </li>
-                            <li>Stage presence - Fluidity, group communication,
-                                audience appeal.</li>
+                            <li><b>Band Size</b>: At least three people and a maximum of eight
+                                people on the stage at any point of time.</li>
+                            <li><b>Instruments provided</b>: A five piece drum set and one bass
+                                guitar.</li>
+                            <li><b>Required Instruments</b>: At least three instruments are
+                                required (different guitars are counted
+                                separately).</li>
+                            <li><b>Lyrics Submission</b>: Participating bands are required to
+                                submit two copies of the lyrics (and their English
+                                translation, if not in Hindi) of their Original
+                                Composition to the Coordinators before their
+                                performance.</li>
+                            <li>Judges’ decision is final and binding.</li>
+                            <li>All rules are subject to change at the discretion of the
+                                coordinators.</li>
+                            <li>Eastern includes any
+                                contemporary/non-contemporary Indian sound –
+                                including Bollywood, and Indian album songs.
+                                Pakistani album/film songs are allowed.</li>
                         </ol>
                     </div>
 
-                    <div class="col-lg-6">
-                        <h2 class="text-center"> Prizes </h2>
-                        <hr>
-
-                        <ol>
-                            <li>The winning band will be provided with a 50% discounted
-                                recording deal at <a href="http://bodhproductions.com"
-                                                     target="_blank">Bodh Productions</a> for a 5 song EP
-                                                 or for A Full Album.</li>
-                            <li>The top 3 bands of Junoon will be provided with
-                                discount vouchers worth Rs. 20000 from the <a
-                                                     href="http://sam.org.in">Swarnabhoomi Academy of
-                                                     Music</a>.</li>
-                            <li>The top 3 bands of Junoon will be provided with
-                                a free song upload profile at <a
-                                                     href="http://www.oklisten.com">OKListen.com</a></li>
-                            <li>A part or the whole of the song of the
-                                winning band will be played on <a href="http://www.radiomirchi.com">Radio
-                                    Mirchi</a>.</li>
-                            <li>The winning band will get his album
-                                featured on <a href="http://www.saavn.com">Saavn</a>.</li>
-                        </ol>
-                    </div>
                 </div>
             </div>
         </div>
@@ -175,17 +175,58 @@
             <div class="center">;
                 <div class="container background-box">
                     <div class="row">
+                        <div class="col-lg-6">
+                            <h2 class="text-center">Cash Prizes</h2>
+                            <hr>
+
+                            <h3 class="text-center">First Prize - 25000 INR</h2>
+                            <h3 class="text-center">Second Prize - 10000 INR</h2>
+                            <h3 class="text-center">Third Prize - 5000 INR</h2>
+                        </div>
+
+                        <div class="col-lg-6">
+                            <h2 class="text-center">Prizes</h2>
+                            <hr>
+
+                            <ol>
+                                <li>The winning band will be provided with a 50% discounted
+                                    recording deal at <a href="http://bodhproductions.com"
+                                                         target="_blank">Bodh Productions</a> for a 5 song EP
+                                                     or for A Full Album.</li>
+                                <li>The top 3 bands of Junoon will be provided with
+                                    discount vouchers worth Rs. 20000 from the <a
+                                                         href="http://sam.org.in">Swarnabhoomi Academy of
+                                                         Music</a>.</li>
+                                <li>The top 3 bands of Junoon will be provided with
+                                    a free song upload profile at <a
+                                                         href="http://www.oklisten.com">OKListen.com</a></li>
+                                <li>A part or the whole of the song of the
+                                    winning band will be played on <a href="http://www.radiomirchi.com">Radio
+                                        Mirchi</a>.</li>
+                                <li>The winning band will get his album
+                                    featured on <a href="http://www.saavn.com">Saavn</a>.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="register" class="intro">
+            <div class="center">;
+                <div class="container">
+                    <div class="row">
                         <div class="col-lg-7">
                             <div>
-                                <h2>Register Your Band</h2>
+                                <h2 class="text-center">Register Your Band</h2>
                                 <hr>
                                 <div class="status alert alert-success" style="display: none"></div>
                                 <form id="main-contact-form" class="contact-form row" name="htmlform" method="POST" action="html_form_send.php">
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="text" name="band" class="form-control" required placeholder="Band Name">
                                     </div>
 
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="email" name="email" class="form-control" required placeholder="Email">
                                     </div>
 
@@ -193,7 +234,7 @@
                                         <input type="text" name="city" class="form-control" required placeholder="City">
                                     </div>
 
-                                    <div class="form-group col-md-5">
+                                    <div class="form-group col-md-7">
                                         <input type="text" name="member1" class="form-control" required placeholder="Member 1">
                                     </div>
 
@@ -201,13 +242,15 @@
                                         <input type="text" name="member2" class="form-control" placeholder="Member 2">
                                     </div>
 
-                                    <div class="form-group col-md-5">
+                                    <div class="form-group col-md-7">
                                         <input type="text" name="member3" class="form-control" placeholder="Member 3">
                                     </div>
+
                                     <div class="form-group col-md-5">
                                         <input type="text" name="member4" class="form-control" placeholder="Member 4">
                                     </div>
-                                    <div class="form-group col-md-5">
+
+                                    <div class="form-group col-md-7">
                                         <input type="text" name="member5" class="form-control" placeholder="Member 5">
                                     </div>
 
@@ -215,58 +258,36 @@
                                         <input type="text" name="phone" class="form-control" required placeholder="Phone Number">
                                     </div>
 
-                                    <div class="form-group col-md-5">
+                                    <div class="form-group col-md-7">
                                         <input type="text" name="altphone" class="form-control" placeholder="Alternative Phone Number">
                                     </div>
 
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="text" name="songs" class="form-control" required placeholder="Songs Link">
                                     </div>
 
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="text" name="fblink" class="form-control" placeholder="Facebook Link">
                                     </div>
 
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="text" name="other" class="form-control"  placeholder="Other Link">
                                     </div>
 
-                                    <div class="form-group col-md-10">
+                                    <div class="form-group col-md-12">
                                         <input type="submit" name="submit" class="btn btn-primary pull-right" value="Submit">
                                     </div>
                                 </form>
                             </div>
                         </div>
+
                         <div class="col-md-5">
                             <div class="contact-info">
-                                <h2 class="heading">Rules</h2>
+                                <h2 class="text-center">Registration</h2>
                                 <hr>
                                 <ol>
-                                    <li>Band Size: At least 3 people and a maximum of 8*
-                                        people on the stage at any point of time.</li>
-                                    <li>Instruments provided: A 5 piece drum set and 1 bass
-                                        guitar.</li>
-                                    <li>Required Instruments: At least 3 instruments are
-                                        required (different guitars are counted
-                                        separately).</li>
-                                    <li>Lyrics Submission: Participating bands are required to
-                                        submit 2 copies of the lyrics (and their English
-                                        translation, if not in Hindi) of their Original
-                                        Composition to the Coordinators before their
-                                        performance.</li>
-                                    <li>Judges’ decision is final and binding.</li>
-                                    <li>All rules are subject to change at the discretion of the
-                                        coordinators.</li>
-                                    <li>Eastern includes any
-                                        contemporary/non-contemporary Indian sound –
-                                        including Bollywood, and Indian album songs.
-                                        Pakistani album/film songs are allowed.</li>
-                                </ol>
-
-                                <br>
-                                <h2 class="heading">Registration</h2>
-                                <hr>
-                                <ol>
+                                    <li>First slot of participating bands will be released on
+                                        the <b>20th of September</b></li>
                                     <li>All bands have to send video links of two of
                                         their recordings. The links can be of a video
                                         uploaded on any popular website like
