--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                 <li><a href="#about">About</a> </li>
                 <li><a href="#gallery">Gallery</a> </li>
                 <li><a href="#final">Final Performance</a></li>
-                <li><a href="#register">Register</a> </li>
                 <li><a href="#contact">Contact Us</a> </li>
             </ul>
         </div>
@@ -51,15 +50,6 @@
         <!-- Full Page Image Header Area -->
         <div id="top" class="header">
             <div class="vert-text">
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <a href="#register" class="btn btn-light btn-lg">Register Here!</a>
             </div>
         </div>
         <!-- /Full Page Image Header Area -->
@@ -81,19 +71,20 @@
                 <div class="container background-box">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <p class="lead" style="color:black">In the past years, Junoon has been judged by renowned artists like Vasundhara Das, Anurag Dixit, Kaash band members and Raeth band members. It has been a launchpad for bands like Astitva, Saadho and Rudraksh. So come, be a part of this extravaganza where bands battle for prestige and prizes worth lacs, and take back with you an experience unforgettable.</p>
+                            <h2 class="text-center">Shortlist</h2>
+                            <hr>
+
+                            <h4>Musafir - Kolkata</h4>
+                            <h4>Dravaka - Delhi</h4>
+                            <h4>Destination - Mumbai</h4>
+                            <h4>Sandesha - Delhi</h4>
+                            <h4>Rangrez - Delhi</h4>
+                            <h4>The KM Experience - Delhi</h4>
+                            <h4>Bandish Puraan - Kolkata</h4>
+                            <h4>The Hans Raj Project - Delhi</h4>
+                            <h4>The Parivatan - IIT Kanpur</h4>
                         </div>
 
-                        <div class="col-lg-12">
-                            <div id="slider" class="flexslider">
-                                <ul class="slides">
-                                    <li> <img src="img/DSC_0011.jpg" /> </li>
-                                    <li> <img src="img/DSC_0201.jpg" /> </li>
-                                    <li> <img src="img/DSC_0145.jpg" /> </li>
-                                    <li> <img src="img/DSC_0119.jpg" /> </li>
-                                </ul>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -206,101 +197,6 @@
                                 <li>The winning band will get his album
                                     featured on <a href="http://www.saavn.com">Saavn</a>.</li>
                             </ol>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="register" class="intro">
-            <div class="center">;
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-7">
-                            <div>
-                                <h2 class="text-center">Register Your Band</h2>
-                                <hr>
-                                <div class="status alert alert-success" style="display: none"></div>
-                                <form id="main-contact-form" class="contact-form row" name="htmlform" method="POST" action="html_form_send.php">
-                                    <div class="form-group col-md-12">
-                                        <input type="text" name="band" class="form-control" required placeholder="Band Name">
-                                    </div>
-
-                                    <div class="form-group col-md-12">
-                                        <input type="email" name="email" class="form-control" required placeholder="Email">
-                                    </div>
-
-                                    <div class="form-group col-md-5">
-                                        <input type="text" name="city" class="form-control" required placeholder="City">
-                                    </div>
-
-                                    <div class="form-group col-md-7">
-                                        <input type="text" name="member1" class="form-control" required placeholder="Member 1">
-                                    </div>
-
-                                    <div class="form-group col-md-5">
-                                        <input type="text" name="member2" class="form-control" placeholder="Member 2">
-                                    </div>
-
-                                    <div class="form-group col-md-7">
-                                        <input type="text" name="member3" class="form-control" placeholder="Member 3">
-                                    </div>
-
-                                    <div class="form-group col-md-5">
-                                        <input type="text" name="member4" class="form-control" placeholder="Member 4">
-                                    </div>
-
-                                    <div class="form-group col-md-7">
-                                        <input type="text" name="member5" class="form-control" placeholder="Member 5">
-                                    </div>
-
-                                    <div class="form-group col-md-5">
-                                        <input type="text" name="phone" class="form-control" required placeholder="Phone Number">
-                                    </div>
-
-                                    <div class="form-group col-md-7">
-                                        <input type="text" name="altphone" class="form-control" placeholder="Alternative Phone Number">
-                                    </div>
-
-                                    <div class="form-group col-md-12">
-                                        <input type="text" name="songs" class="form-control" required placeholder="Songs Link">
-                                    </div>
-
-                                    <div class="form-group col-md-12">
-                                        <input type="text" name="fblink" class="form-control" placeholder="Facebook Link">
-                                    </div>
-
-                                    <div class="form-group col-md-12">
-                                        <input type="text" name="other" class="form-control"  placeholder="Other Link">
-                                    </div>
-
-                                    <div class="form-group col-md-12">
-                                        <input type="submit" name="submit" class="btn btn-primary pull-right" value="Submit">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-
-                        <div class="col-md-5">
-                            <div class="contact-info">
-                                <h2 class="text-center">Registration</h2>
-                                <hr>
-                                <ol>
-                                    <li>First slot of participating bands will be released on
-                                        the <b>20th of September</b></li>
-                                    <li>All bands have to send video links of two of
-                                        their recordings. The links can be of a video
-                                        uploaded on any popular website like
-                                        youtube.com.</li>
-                                    <li>The video should be of any cover performed
-                                        by the band or even a self-composition.</li>
-                                    <li>The video should clearly show all the band
-                                        members performing.</li>
-                                    <li>Shortlisted bands will be informed by email and
-                                        updated on the website.</li>
-                                </ol>
-                                <br>
-                            </div>
                         </div>
                     </div>
                 </div>
