--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                 </li>
                 <li><a href="#top">Home</a> </li>
                 <li><a href="#about">About</a> </li>
-                <li><a href="#gallery">Gallery</a> </li>
+                <li><a href="#shortlist">Shortlist</a> </li>
                 <li><a href="#final">Final Performance</a></li>
+                <li><a href="#sponsors">Sponsors</a> </li>
+                <li><a href="#prizes">Prizes</a></li>
                 <li><a href="#contact">Contact Us</a> </li>
             </ul>
         </div>
@@ -66,7 +68,7 @@
             </div>
         </div>
 
-        <div id="gallery" class="callout">
+        <div id="shortlist" class="callout">
             <div class="center" background="jn.jpg">;
                 <div class="container background-box">
                     <div class="row">
@@ -162,42 +164,68 @@
             </div>
         </div>
 
-        <div id="register" class="callout">
+        <div id="sponsors" class="callout">
             <div class="center">;
-                <div class="container background-box">
                     <div class="row">
-                        <div class="col-lg-6">
-                            <h2 class="text-center">Cash Prizes</h2>
-                            <hr>
-
-                            <h3 class="text-center">First Prize - 25000 INR</h2>
-                            <h3 class="text-center">Second Prize - 10000 INR</h2>
-                            <h3 class="text-center">Third Prize - 5000 INR</h2>
+                        <div class="col-lg-12 text-center">
+                            <img src="./img/luminous.png" alt="Luminous">
                         </div>
+                    </div>
 
-                        <div class="col-lg-6">
-                            <h2 class="text-center">Prizes</h2>
-                            <hr>
-
-                            <ol>
-                                <li>The winning band will be provided with a 50% discounted
-                                    recording deal at <a href="http://bodhproductions.com"
-                                                         target="_blank">Bodh Productions</a> for a 5 song EP
-                                                     or for A Full Album.</li>
-                                <li>The top 3 bands of Junoon will be provided with
-                                    discount vouchers worth Rs. 20000 from the <a
-                                                         href="http://sam.org.in">Swarnabhoomi Academy of
-                                                         Music</a>.</li>
-                                <li>The top 3 bands of Junoon will be provided with
-                                    a free song upload profile at <a
-                                                         href="http://www.oklisten.com">OKListen.com</a></li>
-                                <li>A part or the whole of the song of the
-                                    winning band will be played on <a href="http://www.radiomirchi.com">Radio
-                                        Mirchi</a>.</li>
-                                <li>The winning band will get his album
-                                    featured on <a href="http://www.saavn.com">Saavn</a>.</li>
-                            </ol>
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-1">
+                            <img src="./img/saavn.png"/>
                         </div>
+                        <div class="col-md-2">
+                            <img src="./img/oklisten.png"/>
+                        </div>
+                        <div class="col-md-2">
+                            <img src="./img/bodhproduction.png"/>
+                        </div>
+                        <div class="col-md-2">
+                            <img src="./img/radiomirchi.png"/>
+                        </div>
+                        <div class="col-md-2">
+                            <img src="./img/sam.png"/>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+        <div id="prizes" class="intro">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h2 class="text-center">Cash Prizes</h2>
+                        <hr>
+
+                        <h3 class="text-center">First Prize - 25000 INR</h2>
+                        <h3 class="text-center">Second Prize - 10000 INR</h2>
+                        <h3 class="text-center">Third Prize - 5000 INR</h2>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <h2 class="text-center">Prizes</h2>
+                        <hr>
+
+                        <ol>
+                            <li>The winning band will be provided with a 50% discounted
+                                recording deal at <a href="http://bodhproductions.com"
+                                                     target="_blank">Bodh Productions</a> for a 5 song EP
+                                                 or for A Full Album.</li>
+                            <li>The top 3 bands of Junoon will be provided with
+                                discount vouchers worth Rs. 20000 from the <a
+                                                     href="http://sam.org.in">Swarnabhoomi Academy of
+                                                     Music</a>.</li>
+                            <li>The top 3 bands of Junoon will be provided with
+                                a free song upload profile at <a
+                                                     href="http://www.oklisten.com">OKListen.com</a></li>
+                            <li>A part or the whole of the song of the
+                                winning band will be played on <a href="http://www.radiomirchi.com">Radio
+                                    Mirchi</a>.</li>
+                            <li>The winning band will get his album
+                                featured on <a href="http://www.saavn.com">Saavn</a>.</li>
+                        </ol>
                     </div>
                 </div>
             </div>
