--- a/index.html
+++ b/index.html
@@ -166,28 +166,44 @@
 
         <div id="sponsors" class="callout">
             <div class="center">;
-                    <div class="row">
+                <div class="row">
+                    <a href="http://luminousindia.com">
                         <div class="col-lg-12 text-center">
                             <img src="./img/luminous.png" alt="Luminous">
                         </div>
-                    </div>
+                    </a>
+                </div>
 
-                    <div class="row">
+                <div class="row">
+                    <a href="http://www.saavn.com">
                         <div class="col-md-2 col-md-offset-1">
                             <img src="./img/saavn.png"/>
                         </div>
+                    </a>
+
+                    <a href="http://www.oklisten.com">
                         <div class="col-md-2">
                             <img src="./img/oklisten.png"/>
                         </div>
+                    </a>
+
+                    <a href="http://bodhproductions.com">
                         <div class="col-md-2">
                             <img src="./img/bodhproduction.png"/>
                         </div>
+                    </a>
+
+                    <a href="#">
                         <div class="col-md-2">
                             <img src="./img/radiomirchi.png"/>
                         </div>
+                    </a>
+
+                    <a href="http://sam.org.in">
                         <div class="col-md-2">
                             <img src="./img/sam.png"/>
                         </div>
+                    </a>
                     </div>
             </div>
         </div>
